--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "rmq-handler"
 version = "0.1.0"
-description = ""
+description = "RabbitMQ connections handler."
 authors = ["Kirill <pnchkirill@gmail.com>"]
 readme = "README.md"
 packages = [{include = "rmq_handler"}]
